app/manifest/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-greeter
spec:
  replicas: 3
  selector:
    matchLabels:
      app: go-greeter
  template:
    metadata:
      labels:
        app: go-greeter
    spec:
      containers:
        - name: go-greeter
          image: 493981950259.dkr.ecr.eu-north-1.amazonaws.com/ecr-greeter:latest
          ports:
          - containerPort: 80
          resources:
            limits:
              cpu: "300m"
              memory: "200Mi"
            requests:
              cpu: "30m"
              memory: "100Mi"
