app/manifest/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-greeter
  labels:
    app: go-greeter
spec:
  type: NodePort
  selector:
    app: go-greeter
  ports:
    - name: http
      port: 80
      targetPort: 8080
