app/manifest/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-greeter-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: devops-app
spec:
  rules:
    - http:
        paths:
        - path:  /
          pathType: Prefix
          backend:
            service:
              name: go-greeter
              port:
                number: 80
